Completed lasagna.html recipe web page

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,6 +6,100 @@
 </head>
 <body>
   <h1>Lasagna Recipe</h1>
+  <img src="../images/lasagna.jpeg">
+  <h2>Description:</h2>
+  <p>Making lasagna can be time-consuming, but the results are well worth the wait. You'll find a detailed ingredient list and step-by-step instructions in the recipe below, but let's go over the basics:
+  </p>
+<ul>
+  <li>Prep Time: 30 minutes</li>
+  <li>Cook Time: 2 hours and 30 minutes</li>
+  <li>Additional Time: 15 minutes</li>
+  <li>Total Time: 3 hours and 15 minutes</li>
+  <li>Servings: 12</li>
+</ul>  
+<p>This lasagna recipe is incredibly customizable, so you can easily alter the ingredient list to suit your needs. If you want to stay true to the original recipe, though, these are the ingredients you'll need to add to your grocery list:
+
+</p>
+<h3>Lasagna Ingredients</h3>
+<ul>
+  <li>Meat: Sauage and lean ground beef.</li>
+  <li>Onion and Garlic: 1 onion and two cloves of garlic.</li>
+  <li>Tomato Products: Can of crushed tomatos, two cans of tomato sauce, and two cans of tomato paste.</li>
+  <li>Sugar: Two tablespoons of white sugar.</li>
+  <li>Spices and seasonings: Fresh parsley, dried basil leaves, salt, italian seasoning, fennel seeds, and black pepper.</li>
+  <li>Lasagna noodles</li>
+  <li>Cheeses: Parmesan, mozzarella, and ricotta cheese.</li>
+  <li>1 Egg</li>
+</ul>
+<h3>Steps To Make Lasagna</h3>
+<ol>
+  <li>Make the meat sauce.</li>
+  <li>Cook the noodles.</li>
+  <li>Make the ricotta mixture.</li>
+  <li>Layer the lasagna according to the recipe.</li>
+  <li>Cover with foil and bake.</li>
+  <li>Let the lasagna rest before serving.</li>
+</ol>
+<h3>How to Layer Lasagna</h3>
+<ol>
+  <li>Meat Sauce</li>
+  <li>Noodles</li>
+  <li>Ricotta Mixture</li>
+  <li>Mozzarella Slices</li>
+  <li>Meat Sauce</li>
+  <li>Parmesan Cheese</li>
+  <li>Repeat the layer, then top with the remaining parmesan.</li>    
+</ol>
+<h3>How Long to Cook Lasagna</h3>
+<p>
+    The assembled lasagna should take about 50 minutes to cook in an oven preheated to 375 degrees F. 
+    Cover it with foil for the first 25 minutes, then let it cook uncovered for the final 25 minutes.
+    Also, it's important to let the lasagna rest at room temperature for about 15 minutes before you cut into it.
+</p>
+<h2>Full Ingredient List</h2>
+<ul>
+  <li>1 pound sweet italian sausage</li>
+  <li>3/4 pound lean ground beef</li>
+  <li>1/2 cup minced onion</li>
+  <li>2 cloves garlic, crushed</li>
+  <li>28 ounce can crushed tomatoes</li>
+  <li>2, 6.5 ounce cans canned tomato paste</li>
+  <li>2, 6 ounce cans tomato paste</li>
+  <li>1/2 cup water</li>
+  <li>2 tablespoons white sugar</li>
+  <li>4 tablespoons chopped fresh parsley, divided</li>
+  <li>1/2 teaspoons dried basil leaves</li>
+  <li>1/2 teaspoons salt, divided, or to taste</li>
+  <li>1 teaspoon italian seasoning</li>
+  <li>1/2 teaspoon fennel seeds</li>
+  <li>1/4 teaspoon ground black pepper</li>
+  <li>12 lasagna noodles</li>
+  <li>16 ounces ricotta cheese</li>
+  <li>1 egg</li>
+  <li>3/4 pound mozzarella cheese, sliced</li>
+  <li>3/4 cup grated Parmesan cheese</li>
+</ul>
+<h2>Directions</h2>
+<ul>
+  <li>Step 1: Gather  all your ingredients.</li>
+  <li>Step 2: Cook sausage, ground beef, onion, and garlic on stove over medium heat until well browned.</li>    
+  <li>Step 3: Stir in crushed tomatoes, tomato sauce, tomato paste, and water. Season with sugar, 2 tablespoons parsley, basil, 1 teaspoon salt, Italian seasoning, fennel seeds, and pepper. Simmer, covered, for about 1 ½ hours, stirring occasionally.</li>
+  <li>Step 4: Bring a large pot of lightly salted water to a boil. Cook lasagna noodles in boiling water for 8 to 10 minutes. Drain noodles, and rinse with cold water.</li>
+  <li>Step 5: In a mixing bowl, combine ricotta cheese with egg, remaining 2 tablespoons parsley, and 1/2 teaspoon salt.</li>
+  <li>Step 6: Preheat the oven to 375 degrees F (190 degrees C).</li>
+  <li>Step 7: To assemble, spread 1 ½ cups of meat sauce in the bottom of a 9x13-inch baking dish. Arrange 6 noodles lengthwise over meat sauce, overlapping slightly. Spread with 1/2 of the ricotta cheese mixture. Top with 1/3 of the mozzarella cheese slices. Spoon 1 ½ cups meat sauce over mozzarella, and sprinkle with 1/4 cup Parmesan cheese.</li>
+  <li>Step 8: Repeat layers, and top with remaining mozzarella and Parmesan cheese. Cover with foil: to prevent sticking, either spray foil with cooking spray or make sure the foil does not touch the cheese.</li>
+  <li>Step 9: Bake in the preheated oven for 25 minutes. Remove the foil and bake for an additional 25 minutes.</li>
+  <li>Step 10: Rest lasagna for 15 minutes before serving.</li>  
+</ul>
+<h3>Nutrition Facts</h3>
+<ul>
+  <li>Calories: 448</li>
+  <li>Fat: 21g</li>
+  <li>Carbs: 37g</li>
+  <li>Protein: 30g</li>    
+</ul>
+
 </body>
 
 
