finish chocolate-chips-cookies.html webpage

--- a/recipes/chocolate-chip-cookies.html
+++ b/recipes/chocolate-chip-cookies.html
@@ -7,7 +7,76 @@
   
   <body>
     <h1>Chocolate Chip Cookie Recipe</h1>
-
+    <img src="../images/cookie.jpeg">
+    <h2>Description: </h2>
+    <p>This chocolate chip cookie recipe is truly the best. These chocolate chip cookies are beloved because they're soft, chewy, and absolutely irresistible. 
+        Making bakery-worthy chocolate chip cookies is much easier than it seems. You'll find a detailed ingredient list and step-by-step instructions in the recipe below, but let's go over the basics:
+    </p>
+    <ul>
+      <li>Prep Time: 20 minutes</li>
+      <li>Cook time: 10 minutes</li>
+      <li>Totoal Time: 30 minutes</li>
+      <li>Servings: 48</li>
+      <li>Yield: 4 dozen</li>
+    </ul>
+    <h3>Chocolate Chip Cookie Ingredients</h3>
+    <ul>
+      <li>Butter</li>
+      <li>Eggs</li>
+      <li>Vanilla Extract</li>
+      <li>Baking Soda</li>
+      <li>Water</li>
+      <li>Salt</li>
+      <li>Flour</li>
+      <li>Chocolate Chips</li>
+      <li>Nuts (optional)</li>
+    </ul>
+    <h3>Step-By-Step Instructions</h3>
+    <ol>
+      <li>Beat the butter and sugars, then beat in the eggs and vanilla.</li>
+      <li>Dissolve the baking soda in hot water and addd to the mixture.</li>
+      <li>Stir in the flour, chocolate chips, and walnuts.</li>
+      <li>Drop dough onto a prepared baking sheet.</li>
+      <li>Bake until the edges are golden brown.</li>
+    </ol>
+    <h3>Baking Instructions</h3>
+    <p>In an oven preheated to 350 degrees F, the chocolate chip cookies should be perfectly baked in about 10 minutes.
+       The edges should be golden brown and the cookies should be mostly set (they'll continue to set as the cool).
+    </p>
+    <h2>Full Ingredient List</h2>
+    <ul>
+      <li>1 cup butter, softened</li>
+      <li>1 cup white sugar</li>
+      <li>1 cup packed brown sugar</li>
+      <li>2 eggs</li>
+      <li>2 teaspoons vanilla extract</li>
+      <li>1 teaspoon baking soda</li>
+      <li>2 teaspoons hot water</li>
+      <li>1/2 teaspoon salt</li>
+      <li>3 cups all-purpose flour</li>
+      <li>2 cups semisweet chocolate chips</li>
+      <li>1 cup chopped walnuts</li>
+    </ul>
+    <h2>Directions</h2>
+    <ol>
+      <li>Gather your ingredients, making sure your butter is softened, and your eggs are room temperature.</li>
+      <li>Preheat the oven to 350 degrees F (175 degrees C).</li>
+      <li>Beat butter, white sugar, and brown sugar, with an electric mixer in a large bowl until smooth.</li>
+      <li>Beat in eggs, one at a time, then stir in vanilla.</li>
+      <li>Dissolve baking soda, in hot water. Add to batter along with salt.</li>
+      <li>Stir in flour, chocolate chips, and walnuts.</li>
+      <li>Drop spoonfuls of dough 2 inches apart onto ungreased baking sheets.</li>
+      <li>Bake in preheated oven until edges are nicely browned, about 10 minutes.</li>
+      <li>Cool on baking sheets briefly before removing to a wire rack to cool completely.</li>
+      <li>Store in an airtight container or serve immediately and enjoy!</li>
+    </ol>
+    <h3>Nutrition Facts</h3>
+    <ul>
+      <li>Calories: 146</li>
+      <li>Fat: 8g</li>
+      <li>Carbs: 19g</li>
+      <li>Protein: 2g</li>
+    </ul>
   </body>
 
 </html>
