publish complete project

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       <img src="images/lasagna.jpeg">
       <li><a href="recipes/chocolate-chip-cookies.html" target="_blank" rel="noopener noreferrer">Chocolate Chip Cookie Recipe</a></li>
       <img src="images/cookie.jpeg">
+      <li><a href="recipes/icecream.html" target =_blank" rel="noopener noreferrer"> Vanilla Ice Cream Recipe</a></li>
+      <img src="images/icecream.jpeg" height="250" width="300">
     </ul>   
 </body>
 
